--- a/style/main.css
+++ b/style/main.css
@@ -15,7 +15,7 @@
 body {
     height: 100vh;
     margin: 0;
-    font-family: 'Noto Sans KR', Arial;
+    font-family: 'Noto Sans KR', 'Cabin';
 }
 
 .no_dot {
@@ -273,6 +273,22 @@ header {
 }
 
 .project img {
+    max-width: 100%
+}
+
+hr {
+    border: dotted 1px #484848;
+    text-align: center;
+    margin: 20px;
+}
+
+.projects h5 h6 {
+    font-size: 1rem;
+    line-height: 2;
+    margin: 14px 0;
+}
+
+.projects img {
     max-width: 100%
 }
 
